src/test/ConstructorReturn/ConstructorReturn.expected
error: ConstructorReturn.panda:2:5: constructors may not have a return type
1 error
