src/test/ConstructorReturn/ConstructorReturn.panda
class Foo {
    constructor():Foo {
        return self
    }
}